parser.output
Grammar

    0 $accept: Start $end

    1 Start: ClassList

    2 ClassList: ClassList Class
    3          | Class

    4 Class: Identifier T_OPEN_BRACKET DeclarList MemMethList T_CLOSE_BRACKET
    5      | Identifier T_EXTENDS Identifier T_OPEN_BRACKET DeclarList MemMethList T_CLOSE_BRACKET

    6 Type: T_INTEGER
    7     | T_BOOLEAN
    8     | Identifier
    9     | T_NONE

   10 DeclarList: DeclarList Type VariableDec T_SEMICOLON
   11           | %empty

   12 MemMethList: MethodDec MemMethList
   13            | %empty

   14 MethodDec: Identifier T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   15          | Identifier T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

   16 VariableDec: Identifier
   17            | VariableDec T_COMMA Identifier

   18 Identifier: T_IDENTIFIER

   19 Call: Identifier T_DOT Identifier

   20 Expression: Expression T_PLUS Expression
   21           | Expression T_MINUS Expression
   22           | Expression T_MULTIPLY Expression
   23           | Expression T_DIVIDE Expression
   24           | Expression T_GREATER_THAN Expression
   25           | Expression T_GREATER_THAN_EQUALS Expression
   26           | Expression T_EQUALS Expression
   27           | Expression T_AND Expression
   28           | Expression T_OR Expression
   29           | T_NOT Expression
   30           | T_MINUS Expression
   31           | Identifier
   32           | Call
   33           | MethodCall
   34           | T_OPEN_PAREN Expression T_CLOSE_PAREN
   35           | T_INT
   36           | T_TRUE
   37           | T_FALSE
   38           | T_NEW Identifier
   39           | T_NEW Identifier T_OPEN_PAREN Arguments T_CLOSE_PAREN
   40           | T_NEW Identifier T_OPEN_PAREN T_CLOSE_PAREN

   41 MethodCall: Identifier T_OPEN_PAREN Arguments T_CLOSE_PAREN
   42           | Identifier T_DOT Identifier T_OPEN_PAREN Arguments T_CLOSE_PAREN
   43           | Identifier T_OPEN_PAREN T_CLOSE_PAREN
   44           | Identifier T_DOT Identifier T_OPEN_PAREN T_CLOSE_PAREN

   45 Arguments: Arguments T_COMMA Expression
   46          | Expression

   47 Return: T_RETURN Expression T_SEMICOLON

   48 ParaList: ParaList T_COMMA Param
   49         | Param

   50 Param: Type Identifier

   51 MethodBod: DeclarList StateList Return
   52          | DeclarList Return
   53          | DeclarList StateList
   54          | DeclarList

   55 StateList: StateList Statement
   56          | Statement

   57 Statement: Assignment
   58          | MethodCall T_SEMICOLON
   59          | IfElse
   60          | While
   61          | DoWhile
   62          | Print

   63 Assignment: Identifier T_ASSIGNMENT Expression T_SEMICOLON
   64           | Identifier T_DOT Identifier T_ASSIGNMENT Expression T_SEMICOLON

   65 IfElse: T_IF Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET
   66       | T_IF Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET T_ELSE T_OPEN_BRACKET StateList T_CLOSE_BRACKET

   67 While: T_WHILE Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET

   68 DoWhile: T_DO T_OPEN_BRACKET StateList T_CLOSE_BRACKET T_WHILE T_OPEN_PAREN Expression T_CLOSE_PAREN T_SEMICOLON

   69 Print: T_PRINT Expression T_SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PLUS (258) 20
T_MINUS (259) 21 30
T_MULTIPLY (260) 22
T_DIVIDE (261) 23
T_GREATER_THAN (262) 24
T_GREATER_THAN_EQUALS (263) 25
T_EQUALS (264) 26
T_AND (265) 27
T_OR (266) 28
T_NOT (267) 29
T_OPEN_BRACKET (268) 4 5 14 15 65 66 67 68
T_CLOSE_BRACKET (269) 4 5 14 15 65 66 67 68
T_OPEN_PAREN (270) 14 15 34 39 40 41 42 43 44 68
T_CLOSE_PAREN (271) 14 15 34 39 40 41 42 43 44 68
T_RETURN_TYPE (272) 14 15
T_ASSIGNMENT (273) 63 64
T_DOT (274) 19 42 44 64
T_SEMICOLON (275) 10 47 58 63 64 68 69
T_COMMA (276) 17 45 48
T_IF (277) 65 66
T_ELSE (278) 66
T_WHILE (279) 67 68
T_DO (280) 68
T_PRINT (281) 69
T_RETURN (282) 47
T_INTEGER (283) 6
T_BOOLEAN (284) 7
T_NONE (285) 9
T_TRUE (286) 36
T_FALSE (287) 37
T_NEW (288) 38 39 40
T_EXTENDS (289) 5
T_INT (290) 35
T_IDENTIFIER (291) 18
T_UNARY_MINUS (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Start (39)
    on left: 1, on right: 0
ClassList (40)
    on left: 2 3, on right: 1 2
Class (41)
    on left: 4 5, on right: 2 3
Type (42)
    on left: 6 7 8 9, on right: 10 14 15 50
DeclarList (43)
    on left: 10 11, on right: 4 5 10 51 52 53 54
MemMethList (44)
    on left: 12 13, on right: 4 5 12
MethodDec (45)
    on left: 14 15, on right: 12
VariableDec (46)
    on left: 16 17, on right: 10 17
Identifier (47)
    on left: 18, on right: 4 5 8 14 15 16 17 19 31 38 39 40 41 42 43
    44 50 63 64
Call (48)
    on left: 19, on right: 32
Expression (49)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40, on right: 20 21 22 23 24 25 26 27 28 29 30 34 45 46 47
    63 64 65 66 67 68 69
MethodCall (50)
    on left: 41 42 43 44, on right: 33 58
Arguments (51)
    on left: 45 46, on right: 39 41 42 45
Return (52)
    on left: 47, on right: 51 52
ParaList (53)
    on left: 48 49, on right: 14 48
Param (54)
    on left: 50, on right: 48 49
MethodBod (55)
    on left: 51 52 53 54, on right: 14 15
StateList (56)
    on left: 55 56, on right: 51 53 55 65 66 67 68
Statement (57)
    on left: 57 58 59 60 61 62, on right: 55 56
Assignment (58)
    on left: 63 64, on right: 57
IfElse (59)
    on left: 65 66, on right: 59
While (60)
    on left: 67, on right: 60
DoWhile (61)
    on left: 68, on right: 61
Print (62)
    on left: 69, on right: 62


State 0

    0 $accept: . Start $end

    T_IDENTIFIER  shift, and go to state 1

    Start       go to state 2
    ClassList   go to state 3
    Class       go to state 4
    Identifier  go to state 5


State 1

   18 Identifier: T_IDENTIFIER .

    $default  reduce using rule 18 (Identifier)


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 6


State 3

    1 Start: ClassList .
    2 ClassList: ClassList . Class

    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class       go to state 7
    Identifier  go to state 5


State 4

    3 ClassList: Class .

    $default  reduce using rule 3 (ClassList)


State 5

    4 Class: Identifier . T_OPEN_BRACKET DeclarList MemMethList T_CLOSE_BRACKET
    5      | Identifier . T_EXTENDS Identifier T_OPEN_BRACKET DeclarList MemMethList T_CLOSE_BRACKET

    T_OPEN_BRACKET  shift, and go to state 8
    T_EXTENDS       shift, and go to state 9


State 6

    0 $accept: Start $end .

    $default  accept


State 7

    2 ClassList: ClassList Class .

    $default  reduce using rule 2 (ClassList)


State 8

    4 Class: Identifier T_OPEN_BRACKET . DeclarList MemMethList T_CLOSE_BRACKET

    $default  reduce using rule 11 (DeclarList)

    DeclarList  go to state 10


State 9

    5 Class: Identifier T_EXTENDS . Identifier T_OPEN_BRACKET DeclarList MemMethList T_CLOSE_BRACKET

    T_IDENTIFIER  shift, and go to state 1

    Identifier  go to state 11


State 10

    4 Class: Identifier T_OPEN_BRACKET DeclarList . MemMethList T_CLOSE_BRACKET
   10 DeclarList: DeclarList . Type VariableDec T_SEMICOLON

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_NONE        shift, and go to state 14
    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 13 (MemMethList)

    Type         go to state 15
    MemMethList  go to state 16
    MethodDec    go to state 17
    Identifier   go to state 18


State 11

    5 Class: Identifier T_EXTENDS Identifier . T_OPEN_BRACKET DeclarList MemMethList T_CLOSE_BRACKET

    T_OPEN_BRACKET  shift, and go to state 19


State 12

    6 Type: T_INTEGER .

    $default  reduce using rule 6 (Type)


State 13

    7 Type: T_BOOLEAN .

    $default  reduce using rule 7 (Type)


State 14

    9 Type: T_NONE .

    $default  reduce using rule 9 (Type)


State 15

   10 DeclarList: DeclarList Type . VariableDec T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 1

    VariableDec  go to state 20
    Identifier   go to state 21


State 16

    4 Class: Identifier T_OPEN_BRACKET DeclarList MemMethList . T_CLOSE_BRACKET

    T_CLOSE_BRACKET  shift, and go to state 22


State 17

   12 MemMethList: MethodDec . MemMethList

    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 13 (MemMethList)

    MemMethList  go to state 23
    MethodDec    go to state 17
    Identifier   go to state 24


State 18

    8 Type: Identifier .
   14 MethodDec: Identifier . T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   15          | Identifier . T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_OPEN_PAREN  shift, and go to state 25

    $default  reduce using rule 8 (Type)


State 19

    5 Class: Identifier T_EXTENDS Identifier T_OPEN_BRACKET . DeclarList MemMethList T_CLOSE_BRACKET

    $default  reduce using rule 11 (DeclarList)

    DeclarList  go to state 26


State 20

   10 DeclarList: DeclarList Type VariableDec . T_SEMICOLON
   17 VariableDec: VariableDec . T_COMMA Identifier

    T_SEMICOLON  shift, and go to state 27
    T_COMMA      shift, and go to state 28


State 21

   16 VariableDec: Identifier .

    $default  reduce using rule 16 (VariableDec)


State 22

    4 Class: Identifier T_OPEN_BRACKET DeclarList MemMethList T_CLOSE_BRACKET .

    $default  reduce using rule 4 (Class)


State 23

   12 MemMethList: MethodDec MemMethList .

    $default  reduce using rule 12 (MemMethList)


State 24

   14 MethodDec: Identifier . T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   15          | Identifier . T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_OPEN_PAREN  shift, and go to state 25


State 25

   14 MethodDec: Identifier T_OPEN_PAREN . ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   15          | Identifier T_OPEN_PAREN . T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_CLOSE_PAREN  shift, and go to state 29
    T_INTEGER      shift, and go to state 12
    T_BOOLEAN      shift, and go to state 13
    T_NONE         shift, and go to state 14
    T_IDENTIFIER   shift, and go to state 1

    Type        go to state 30
    Identifier  go to state 31
    ParaList    go to state 32
    Param       go to state 33


State 26

    5 Class: Identifier T_EXTENDS Identifier T_OPEN_BRACKET DeclarList . MemMethList T_CLOSE_BRACKET
   10 DeclarList: DeclarList . Type VariableDec T_SEMICOLON

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_NONE        shift, and go to state 14
    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 13 (MemMethList)

    Type         go to state 15
    MemMethList  go to state 34
    MethodDec    go to state 17
    Identifier   go to state 18


State 27

   10 DeclarList: DeclarList Type VariableDec T_SEMICOLON .

    $default  reduce using rule 10 (DeclarList)


State 28

   17 VariableDec: VariableDec T_COMMA . Identifier

    T_IDENTIFIER  shift, and go to state 1

    Identifier  go to state 35


State 29

   15 MethodDec: Identifier T_OPEN_PAREN T_CLOSE_PAREN . T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_RETURN_TYPE  shift, and go to state 36


State 30

   50 Param: Type . Identifier

    T_IDENTIFIER  shift, and go to state 1

    Identifier  go to state 37


State 31

    8 Type: Identifier .

    $default  reduce using rule 8 (Type)


State 32

   14 MethodDec: Identifier T_OPEN_PAREN ParaList . T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   48 ParaList: ParaList . T_COMMA Param

    T_CLOSE_PAREN  shift, and go to state 38
    T_COMMA        shift, and go to state 39


State 33

   49 ParaList: Param .

    $default  reduce using rule 49 (ParaList)


State 34

    5 Class: Identifier T_EXTENDS Identifier T_OPEN_BRACKET DeclarList MemMethList . T_CLOSE_BRACKET

    T_CLOSE_BRACKET  shift, and go to state 40


State 35

   17 VariableDec: VariableDec T_COMMA Identifier .

    $default  reduce using rule 17 (VariableDec)


State 36

   15 MethodDec: Identifier T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE . Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_NONE        shift, and go to state 14
    T_IDENTIFIER  shift, and go to state 1

    Type        go to state 41
    Identifier  go to state 31


State 37

   50 Param: Type Identifier .

    $default  reduce using rule 50 (Param)


State 38

   14 MethodDec: Identifier T_OPEN_PAREN ParaList T_CLOSE_PAREN . T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_RETURN_TYPE  shift, and go to state 42


State 39

   48 ParaList: ParaList T_COMMA . Param

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_NONE        shift, and go to state 14
    T_IDENTIFIER  shift, and go to state 1

    Type        go to state 30
    Identifier  go to state 31
    Param       go to state 43


State 40

    5 Class: Identifier T_EXTENDS Identifier T_OPEN_BRACKET DeclarList MemMethList T_CLOSE_BRACKET .

    $default  reduce using rule 5 (Class)


State 41

   15 MethodDec: Identifier T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type . T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_OPEN_BRACKET  shift, and go to state 44


State 42

   14 MethodDec: Identifier T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE . Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_NONE        shift, and go to state 14
    T_IDENTIFIER  shift, and go to state 1

    Type        go to state 45
    Identifier  go to state 31


State 43

   48 ParaList: ParaList T_COMMA Param .

    $default  reduce using rule 48 (ParaList)


State 44

   15 MethodDec: Identifier T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET . MethodBod T_CLOSE_BRACKET

    $default  reduce using rule 11 (DeclarList)

    DeclarList  go to state 46
    MethodBod   go to state 47


State 45

   14 MethodDec: Identifier T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type . T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_OPEN_BRACKET  shift, and go to state 48


State 46

   10 DeclarList: DeclarList . Type VariableDec T_SEMICOLON
   51 MethodBod: DeclarList . StateList Return
   52          | DeclarList . Return
   53          | DeclarList . StateList
   54          | DeclarList .

    T_IF          shift, and go to state 49
    T_WHILE       shift, and go to state 50
    T_DO          shift, and go to state 51
    T_PRINT       shift, and go to state 52
    T_RETURN      shift, and go to state 53
    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_NONE        shift, and go to state 14
    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 54 (MethodBod)

    Type        go to state 15
    Identifier  go to state 54
    MethodCall  go to state 55
    Return      go to state 56
    StateList   go to state 57
    Statement   go to state 58
    Assignment  go to state 59
    IfElse      go to state 60
    While       go to state 61
    DoWhile     go to state 62
    Print       go to state 63


State 47

   15 MethodDec: Identifier T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod . T_CLOSE_BRACKET

    T_CLOSE_BRACKET  shift, and go to state 64


State 48

   14 MethodDec: Identifier T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET . MethodBod T_CLOSE_BRACKET

    $default  reduce using rule 11 (DeclarList)

    DeclarList  go to state 46
    MethodBod   go to state 65


State 49

   65 IfElse: T_IF . Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET
   66       | T_IF . Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET T_ELSE T_OPEN_BRACKET StateList T_CLOSE_BRACKET

    T_MINUS       shift, and go to state 66
    T_NOT         shift, and go to state 67
    T_OPEN_PAREN  shift, and go to state 68
    T_TRUE        shift, and go to state 69
    T_FALSE       shift, and go to state 70
    T_NEW         shift, and go to state 71
    T_INT         shift, and go to state 72
    T_IDENTIFIER  shift, and go to state 1

    Identifier  go to state 73
    Call        go to state 74
    Expression  go to state 75
    MethodCall  go to state 76


State 50

   67 While: T_WHILE . Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET

    T_MINUS       shift, and go to state 66
    T_NOT         shift, and go to state 67
    T_OPEN_PAREN  shift, and go to state 68
    T_TRUE        shift, and go to state 69
    T_FALSE       shift, and go to state 70
    T_NEW         shift, and go to state 71
    T_INT         shift, and go to state 72
    T_IDENTIFIER  shift, and go to state 1

    Identifier  go to state 73
    Call        go to state 74
    Expression  go to state 77
    MethodCall  go to state 76


State 51

   68 DoWhile: T_DO . T_OPEN_BRACKET StateList T_CLOSE_BRACKET T_WHILE T_OPEN_PAREN Expression T_CLOSE_PAREN T_SEMICOLON

    T_OPEN_BRACKET  shift, and go to state 78


State 52

   69 Print: T_PRINT . Expression T_SEMICOLON

    T_MINUS       shift, and go to state 66
    T_NOT         shift, and go to state 67
    T_OPEN_PAREN  shift, and go to state 68
    T_TRUE        shift, and go to state 69
    T_FALSE       shift, and go to state 70
    T_NEW         shift, and go to state 71
    T_INT         shift, and go to state 72
    T_IDENTIFIER  shift, and go to state 1

    Identifier  go to state 73
    Call        go to state 74
    Expression  go to state 79
    MethodCall  go to state 76


State 53

   47 Return: T_RETURN . Expression T_SEMICOLON

    T_MINUS       shift, and go to state 66
    T_NOT         shift, and go to state 67
    T_OPEN_PAREN  shift, and go to state 68
    T_TRUE        shift, and go to state 69
    T_FALSE       shift, and go to state 70
    T_NEW         shift, and go to state 71
    T_INT         shift, and go to state 72
    T_IDENTIFIER  shift, and go to state 1

    Identifier  go to state 73
    Call        go to state 74
    Expression  go to state 80
    MethodCall  go to state 76


State 54

    8 Type: Identifier .
   41 MethodCall: Identifier . T_OPEN_PAREN Arguments T_CLOSE_PAREN
   42           | Identifier . T_DOT Identifier T_OPEN_PAREN Arguments T_CLOSE_PAREN
   43           | Identifier . T_OPEN_PAREN T_CLOSE_PAREN
   44           | Identifier . T_DOT Identifier T_OPEN_PAREN T_CLOSE_PAREN
   63 Assignment: Identifier . T_ASSIGNMENT Expression T_SEMICOLON
   64           | Identifier . T_DOT Identifier T_ASSIGNMENT Expression T_SEMICOLON

    T_OPEN_PAREN  shift, and go to state 81
    T_ASSIGNMENT  shift, and go to state 82
    T_DOT         shift, and go to state 83

    $default  reduce using rule 8 (Type)


State 55

   58 Statement: MethodCall . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 84


State 56

   52 MethodBod: DeclarList Return .

    $default  reduce using rule 52 (MethodBod)


State 57

   51 MethodBod: DeclarList StateList . Return
   53          | DeclarList StateList .
   55 StateList: StateList . Statement

    T_IF          shift, and go to state 49
    T_WHILE       shift, and go to state 50
    T_DO          shift, and go to state 51
    T_PRINT       shift, and go to state 52
    T_RETURN      shift, and go to state 53
    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 53 (MethodBod)

    Identifier  go to state 85
    MethodCall  go to state 55
    Return      go to state 86
    Statement   go to state 87
    Assignment  go to state 59
    IfElse      go to state 60
    While       go to state 61
    DoWhile     go to state 62
    Print       go to state 63


State 58

   56 StateList: Statement .

    $default  reduce using rule 56 (StateList)


State 59

   57 Statement: Assignment .

    $default  reduce using rule 57 (Statement)


State 60

   59 Statement: IfElse .

    $default  reduce using rule 59 (Statement)


State 61

   60 Statement: While .

    $default  reduce using rule 60 (Statement)


State 62

   61 Statement: DoWhile .

    $default  reduce using rule 61 (Statement)


State 63

   62 Statement: Print .

    $default  reduce using rule 62 (Statement)


State 64

   15 MethodDec: Identifier T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET .

    $default  reduce using rule 15 (MethodDec)


State 65

   14 MethodDec: Identifier T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod . T_CLOSE_BRACKET

    T_CLOSE_BRACKET  shift, and go to state 88


State 66

   30 Expression: T_MINUS . Expression
